--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,15 +14,15 @@
                             <li>
                                 <span class="th-addressicon"><i class="fa fa-envelope"></i></span>
                                 <div class="th-addresscontent">
-                                  <strong class="mt-2"><a href="mailto:info@alruwadco.com">info@alruwadco.com</a></strong>
+                                  <strong class="mt-2"><a href="mailto:info@alruwadco.com">info@weinsure.com</a></strong>
                                   <!--<span>alruwadmed@gmail.com</span>-->
                                 </div>
                             </li>
                             <li>
                                 <span class="th-addressicon"><i class="fa fa-phone"></i></span>
                                 <div class="th-addresscontent">
-                                  <strong>05022102423</strong>
-                                  <span>01113000659</span>
+                                  <strong>0500011252</strong>
+                                  <span>01099999999</span>
                                 </div>
                             </li>
                             <li>
