update content weinsure

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -28,8 +28,8 @@
                                 <span class="th-addressicon"><img src="assets/images/img-10.png"
                                         alt="image description"></span>
                                 <div class="th-phone">
-                                    <span class="mt-2"><a href="mailto:info@alruwadco.com">info@alruwadco.com</a></span>
-                                    <!--<span><a href="mailto:alruwadmed@gmail.com">alruwadmed@gmail.com</a></span>-->
+                                    <span class="mt-2"><a href="mailto:info@weinsure.com">info@weinsure.com</a></span>
+                                   
                                 </div>
                             </li>
                         </ul>
@@ -41,11 +41,11 @@
                           <h3>{{ "ABOUTUS"   }}</h3>
                         </div>
                         <div class="th-description">
-                          <p>{{ "WelcomeDetails1"   }}</p>
-                          <p>{{ "WelcomeDetails2"   }}</p>
+                          <p>{{ "Introduction"   }}</p>
+                          <p>{{ "Vision Mission"   }}</p>
                         </div>
                         <ul class="th-socialicons th-socialiconsround">
-                            <li><a href="https://m.facebook.com/Alruwad-medical-group-256390208395275/"><i class="fa fa-facebook-f"></i></a></li>
+                            <li><a href="https://m.facebook.com/"><i class="fa fa-facebook-f"></i></a></li>
                             <!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
@@ -58,12 +58,10 @@
                             <h3>Useful Links</h3>
                         </div>
                         <ul class="th-usefullinks">
-                            <li><a href="#">Get An Appointment</a></li>
+                            <li><a href="#">Car Insurance</a></li>
                             <li><a href="#">Customer Help Desk</a></li>
                             <li><a href="#">Our Recent Projects</a></li>
                             <li><a href="#">Contract Procedures</a></li>
-                            <li><a href="#">Building Plan Model</a></li>
-                            <li><a href="#">Property Renovation</a></li>
                         </ul>
                     </div>
                 </div>
