--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,214 +23,243 @@
 
     <ng-container *ngFor="let img of Images">
       <ng-template carouselSlide [id]="img.id">
-        <img [src]="img.src" style="height:500px;width:100%">
+        <img src="{{ 'assets/images' + img.src }}" style="height:500px;width:100%">
       </ng-template>
     </ng-container>
 
   </owl-carousel-o>
 
-
 </div>
 <!-- End Slider -->
 
-
 <main id="th-main" class="th-main th-haslayout">
-	<!-- Start Features -->
-	<section class="th-sectionspace th-haslayout th-pattrenone">
-		<div class="container">
-			<div class="row">
-				<div class="th-featuresandtime">
-					<div class="col-12">
-						<div class="th-sectionhead th-alignleft th-nopattren">
-							<div class="th-sectiontitle">
-								<h2>{{ "WeGiveYou"   }} <span>{{ "theBest"   }}</span></h2>
-							</div>
-							<div class="th-description">
-								<p>{{ "Intro"   }}</p>
-							</div>
-						</div>
-						<div class="th-features">
-							<div class="row">
-								<div class="col-lg-4 col-12">
-									<div class="th-feature">
-										<div class="th-featurehead">
-											<span class="th-featureicon"><i class="fa fa-medkit"></i></span>
-											<div class="th-featuretitle">
-												<h3><a href="#">Pharmaceutical products</a></h3>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-4 col-12">
-									<div class="th-feature">
-										<div class="th-featurehead">
-											<span class="th-featureicon"><i class="fa fa-heartbeat"></i></span>
-											<div class="th-featuretitle">
-												<h3><a href="#">Medical Devices & Hospital Furniture</a></h3>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-4 col-12">
-									<div class="th-feature">
-										<div class="th-featurehead">
-											<span class="th-featureicon"><i class="fa fa-flask"></i></span>
-											<div class="th-featuretitle">
-												<h3><a href="#">Consumer Care Products</a></h3>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Features -->
+  <!-- Start Features -->
+  <section class="th-sectionspace th-haslayout th-pattrenone">
+    <div class="container">
+      <div class="row">
+        <div class="th-featuresandtime">
+          <div class="col-12">
+            <div class="th-sectionhead th-alignleft th-nopattren">
+              <div class="th-sectiontitle">
+                <h2>{{ "WeGiveYou"   }} <span>{{ "theBest"   }}</span></h2>
+              </div>
+              <div class="th-description font-weight-bold">
+                <p>{{ "Find the best deals for your car insurance in Dubai and Abu Dhabi"}}</p>
+              </div>
+            </div>
+            <div class="th-features">
+              <div class="row">
+                <div class="col-lg-4 col-12">
+                  <div class="th-feature">
+                    <div class="th-featurehead">
+                      <span class="th-featureicon"><i class="fa fa-bullseye"></i></span>
+                      <div class="th-featuretitle">
+                        <h3><a href="#">Unbeatable Rates</a></h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-12">
+                  <div class="th-feature">
+                    <div class="th-featurehead">
+                      <span class="th-featureicon"><i class="fa fa-percent"></i></span>
+                      <div class="th-featuretitle">
+                        <h3><a href="#">Save Upto 30%</a></h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-12">
+                  <div class="th-feature">
+                    <div class="th-featurehead">
+                      <span class="th-featureicon"><i class="fa fa-headphones"></i></span>
+                      <div class="th-featuretitle">
+                        <h3><a href="#">Expert Support</a></h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
-	<!-- Start About -->
-	<section>
-		<div class="about-us">
-			<div class="row">
-				<div class="col-lg-6 col-12">
-					<img src="assets/images/about-us-2.webp" alt="">
-				</div>
-				<div class="col-lg-6 col-12">
-					<div class="about-content">
-						<h2>{{ "WelcomeTo"   }} <span>{{ "AlRuwadGroup"   }}</span></h2>
-						<p>
-						  {{ "WelcomeDetails1"   }}<br><br>
-						  {{ "WelcomeDetails2"   }}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End About -->
+                <div class="col-lg-4 col-12 mt-3">
+                  <div class="th-feature">
+                    <div class="th-featurehead">
+                      <span class="th-featureicon"><i class="fa fa-area-chart"></i></span>
+                      <div class="th-featuretitle">
+                        <h3><a href="#">120K Policies Sold</a></h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-12 mt-3">
+                  <div class="th-feature">
+                    <div class="th-featurehead">
+                      <span class="th-featureicon"><i class="fa fa-lock"></i></span>
+                      <div class="th-featuretitle">
+                        <h3><a href="#">Secure Online Payment</a></h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-12 mt-3">
+                  <div class="th-feature">
+                    <div class="th-featurehead">
+                      <span class="th-featureicon"><i class="fa fa-key"></i></span>
+                      <div class="th-featuretitle">
+                        <h3><a href="#">Money Back Guarantee</a></h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-	<!-- Start Services -->
-	<section class="th-sectionspace th-haslayout">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<div class="th-sectionhead">
-						<div class="th-sectiontitle">
-							<h2>The Services <span>We Offer</span></h2>
-						</div>
-						<div class="th-description">
-							<p>Today still wanted by the government they survive as soldiers of fortune love exciting
-								and new come aboard were expecting you love life is sweetest reward Let it flow it
-								floats back to you there</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-12 col-12">
-					<div class="th-services">
-						<div class="th-service">
-							<span class="th-serciceicon">
-								<i class="fa fa-flask"></i>
-							</span>
-							<div class="th-servicetitle">
-								<h3><a href="services.html">Pharmacies</a></h3>
-							</div>
-						</div>
-						<div class="th-service">
-							<span class="th-serciceicon">
-								<i class="fa fa-user-md"></i>
-							</span>
-							<div class="th-servicetitle">
-								<h3><a href="services.html">Hospitals & Clinics</a></h3>
-							</div>
-						</div>
-						<div class="th-service">
-							<span class="th-serciceicon">
-								<i class="fa fa-shopping-cart"></i>
-							</span>
-							<div class="th-servicetitle">
-								<h3><a href="services.html">Supermarkets</a></h3>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Services -->
-
-	<!-- Start Statistics -->
-	<section class="th-haslayout statistics">
-		<div class="container">
-			<div class="row">
-				<div class="th-counters">
-					<div class="th-counter">
-						<span class="th-countericon">
-							<i class="fa fa-trophy"></i>
-						</span>
-						<div class="th-counterbox">
-							<div class="th-countertitle">
-                <h2>{{ "YearsOfExperience"   }}</h2>
-							</div>
-							<div class="th-count">
-								<h3 data-from="0" data-to="125" data-speed="8000" data-refresh-interval="50">16 +</h3>
-							</div>
-						</div>
-					</div>
-					<div class="th-counter">
-						<span class="th-countericon">
-							<i class="fa fa-stethoscope"></i>
-						</span>
-						<div class="th-counterbox">
-							<div class="th-countertitle">
-                <h2>{{ "EmployeeNumber"   }}</h2>
-							</div>
-							<div class="th-count">
-                <h3 data-from="0" data-to="1180" data-speed="8000" data-refresh-interval="50">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Features -->
+  <!-- Start About -->
+  <section>
+    <div class="about-us">
+      <div class="row">
+        <div class="col-lg-6 col-12">
+          <img src="assets/images/about-us-2.webp" alt="">
+        </div>
+        <div class="col-lg-6 col-12">
+          <div class="about-content">
+            <h2 style="color:#ffed00">{{ "WelcomeTo"   }} <span  style="color:#ffed00">{{ "WeInsure"   }}</span></h2>
+            <p class="mt-2 font-weight-normal">
+              <i  style="color:#ffed00" class="fa fa-check-circle"></i>{{ "  Get free vouchers with every comprehensive UAE car insurance purchase"   }}<br><br>
+              <i  style="color:#ffed00" class="fa fa-check-circle"></i>{{ "  Safe drivers get up to 15% off!"}}<br><br>
+              <i  style="color:#ffed00" class="fa fa-check-circle"></i>{{ "  Find rates for car insurance in Dubai that aren’t available anywhere else!" }}
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End About -->
+  <!-- Start Services -->
+  <section class="th-sectionspace th-haslayout">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="th-sectionhead" style="max-width: fit-content;margin-bottom: 12px !important;">
+            <div class="th-sectiontitle">
+              <h2>WHY BUY YOUR AUTO INSURANCE <span>THROUGH US?</span></h2>
+            </div>
+            <div class="th-description">
+              <p>
+                
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-12">
+          <div class="th-services">
+            <div class="th-service">
+              <span class="th-serciceicon">
+                <i class="fa fa-clock-o"></i>
+              </span>
+              <div class="th-servicetitle">
+                <h3><a href="#">The process takes minutes and you get instant quotes online</a></h3>
+              </div>
+            </div>
+            <div class="th-service">
+              <span class="th-serciceicon">
+                <i class="fa fa-search"></i>
+              </span>
+              <div class="th-servicetitle">
+                <h3><a href="#">Compare quotes online and find the policy that’s right for you</a></h3>
+              </div>
+            </div>
+            <div class="th-service" style="padding:38px !important">
+              <span class="th-serciceicon">
+                <i class="fa fa-support"></i>
+              </span>
+              <div class="th-servicetitle">
+                <h3><a href="#">If you need help our insurance advisors can offer assistance by phone or email</a></h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Services -->
+  <!-- Start Statistics -->
+  <section class="th-haslayout statistics">
+    <div class="container">
+      <div class="row">
+        <div class="th-counters">
+          <div class="th-counter">
+            <span class="th-countericon">
+              <i class="fa fa-trophy"></i>
+            </span>
+            <div class="th-counterbox">
+              <div class="th-countertitle" >
+                <h2 style="color:#ffed00">{{ "Years Of Experience"   }}</h2>
+              </div>
+              <div class="th-count">
+                <h3 data-from="0" data-to="125" data-speed="8000" data-refresh-interval="50" style="color:white">16 +</h3>
+              </div>
+            </div>
+          </div>
+          <div class="th-counter">
+            <span class="th-countericon">
+              <i class="fa fa-stethoscope"></i>
+            </span>
+            <div class="th-counterbox">
+              <div class="th-countertitle" >
+                <h2 style="color:#ffed00">{{ "Employee Number"   }}</h2>
+              </div>
+              <div class="th-count">
+                <h3 data-from="0" data-to="1180" data-speed="8000" data-refresh-interval="50" style="color:white">
                   150 +
                 </h3>
-							</div>
-						</div>
-					</div>
-					<div class="th-counter">
-						<span class="th-countericon">
-							<i class="fa fa-shield"></i>
-						</span>
-						<div class="th-counterbox">
-							<div class="th-countertitle">
-                <h2>{{ "Channels"   }}</h2>
-							</div>
-							<div class="th-count">
-								<h3 data-from="0" data-to="650" data-speed="8000" data-refresh-interval="50">2000 +</h3>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Statistics -->
-
-	<!-- Start Sponsors -->
-	<section class="sponsors" style="background:#2d3e5033 !important">
+              </div>
+            </div>
+          </div>
+          <div class="th-counter">
+            <span class="th-countericon">
+              <i class="fa fa-shield"></i>
+            </span>
+            <div class="th-counterbox">
+              <div class="th-countertitle" >
+                <h2 style="color:#ffed00">
+                  {{ "Our Clients"}}
+                </h2>
+              </div>
+              <div class="th-count">
+                <h3 data-from="0" data-to="650" data-speed="8000" data-refresh-interval="50" style="color:white">2000 +</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Statistics -->
+  <!-- Start Sponsors -->
+  <section class="sponsors" style="background:#2d3e5033 !important">
     <div class="container">
       <!--<owl-carousel [options]="CarouselOptions" [items]="sponsors" [carouselClasses]="['owl-theme', 'sliding']">
-    <div class="item" *ngFor="let logo of sponsors">
-      <img src={{logo}} />
-    </div>
-  </owl-carousel>-->
+        <div class="item" *ngFor="let logo of sponsors">
+          <img src={{logo}} />
+        </div>
+      </owl-carousel>-->
       <owl-carousel-o [options]="CarouselOptions">
 
         <ng-container *ngFor="let logo of sponsors">
           <ng-template carouselSlide [id]="logo.id">
-            <img [src]="logo.src">
+            <img src="{{ 'assets/images' + logo.src }}">
           </ng-template>
         </ng-container>
 
       </owl-carousel-o>
 
     </div>
-	</section>
-	<!-- End Sponsors -->
+  </section>
+  <!-- End Sponsors -->
 </main>
