change ui color

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -177,7 +177,7 @@
 }
 .th-services .th-service .th-servicetitle h3 a {
     margin: 0;
-    color: #394e64;
+    color: whitesmoke;
     font-size: 21px;
     font-weight: 600;
     line-height: 21px;
