add scrol to top

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 body {
   color: #373542;
-  background: #e3e5e4;
+  background: #EEF9FF;
   font: 400 14px/20px "Open Sans", Arial, Helvetica, sans-serif;
 }
 a:hover {
