--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
   <app-header></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
+  <button *ngIf="isShow" (click)="gotoTop()">
+    <span style="font-size: 45px;color: #00adef;"><i class="fa fa-arrow-circle-up"></i></span>
+  </button>
 </div>
 <!--************************************
     Wrapper End
