--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,28 +10,23 @@
                                 <img src="assets/images/logo.png" alt="image description">
                             </a>
                         </strong>
-                        <ul class="th-faddressinfo">
-                            <li>
-                                <span class="th-addressicon"><img src="assets/images/img-08.png"
-                                        alt="image description"></span>
-                                <address>{{ "Address1"   }}</address>
-                            </li>
-                            <li>
-                                <span class="th-addressicon"><img src="assets/images/img-09.png"
-                                        alt="image description"></span>
-                                <div class="th-phone">
-                                  <span>05022102423 , 0502103423</span>                                  
-                                  <span>01113000659 , 01101919494</span>
-                                </div>
-                            </li>
-                            <li>
-                                <span class="th-addressicon"><img src="assets/images/img-10.png"
-                                        alt="image description"></span>
-                                <div class="th-phone">
-                                    <span class="mt-2"><a href="mailto:info@weinsure.com">info@weinsure.com</a></span>
-                                   
-                                </div>
-                            </li>
+                        <p>
+                            If you need help our insurance advisors can offer assistance by phone or email
+                            If you need help our insurance advisors can offer assistance by phone or email
+                            If you need help our insurance advisors can offer assistance by phone or email
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-12">
+                    <div class="th-fcol">
+                        <div class="th-borderheading">
+                            <h3>Useful Links</h3>
+                        </div>
+                        <ul class="th-usefullinks">
+                            <li><a href="#">Car Insurance</a></li>
+                            <li><a href="#">Customer Help Desk</a></li>
+                            <li><a href="#">Our Recent Projects</a></li>
+                            <li><a href="#">Contract Procedures</a></li>
                         </ul>
                     </div>
                 </div>
@@ -46,23 +41,43 @@
                         </div>
                         <ul class="th-socialicons th-socialiconsround">
                             <li><a href="https://m.facebook.com/"><i class="fa fa-facebook-f"></i></a></li>
-                            <!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-12">
-                    <div class="th-fcol">
-                        <div class="th-borderheading">
-                            <h3>Useful Links</h3>
-                        </div>
-                        <ul class="th-usefullinks">
-                            <li><a href="#">Car Insurance</a></li>
-                            <li><a href="#">Customer Help Desk</a></li>
-                            <li><a href="#">Our Recent Projects</a></li>
-                            <li><a href="#">Contract Procedures</a></li>
-                        </ul>
+            </div>
+            <div class="th-faddressinfo mt-5">
+                <div class="row">
+                    <div class="col-lg-4 col-12">
+                        <li>
+                            <span class="th-addressicon">
+                                <img src="assets/images/img-08.png" alt="image description">
+                            </span>
+                            <address class="m-0">{{ "Address1"   }}</address>
+                        </li>
+                    </div>
+                    <div class="col-lg-4 col-12">
+                        <li>
+                            <span class="th-addressicon">
+                                <img src="assets/images/img-09.png" alt="image description">
+                            </span>
+                            <div class="th-phone">
+                              <span>05022102423 , 0502103423</span>                                  
+                              <span>01113000659 , 01101919494</span>
+                            </div>
+                        </li>
+                    </div>
+                    <div class="col-lg-4 col-12">
+                        <li>
+                            <span class="th-addressicon">
+                                <img src="assets/images/img-10.png" alt="image description">
+                            </span>
+                            <div class="th-phone">
+                                <span><a href="mailto:info@weinsure.com">info@weinsure.com</a></span>
+                            </div>
+                        </li>
                     </div>
                 </div>
             </div>
