--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,45 +4,11 @@
 <header id="th-header" class="th-header th-haslayout">
     <div class="th-topbar">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-12 n-col">
-                    <strong class="th-logo">
-                        <a href="index.html"><img src="assets/images/logo.png" alt="image description"></a>
-                    </strong>
-                    <div class="th-rightarea">
-                        <ul class="th-addressbox">
-                            <li>
-                                <span class="th-addressicon"><i class="fa fa-envelope"></i></span>
-                                <div class="th-addresscontent">
-                                  <strong class="mt-2"><a href="mailto:info@alruwadco.com">info@weinsure.com</a></strong>
-                                  <!--<span>alruwadmed@gmail.com</span>-->
-                                </div>
-                            </li>
-                            <li>
-                                <span class="th-addressicon"><i class="fa fa-phone"></i></span>
-                                <div class="th-addresscontent">
-                                  <strong>0500011252</strong>
-                                  <span>01099999999</span>
-                                </div>
-                            </li>
-                            <!--<li>
-                                <span class="th-addressicon" style="cursor: pointer;">
-                                    <i class="fa fa-globe" aria-hidden="true"></i>
-                                </span>
-                                <div class="th-addresscontent">
-                                    <strong style="line-height: 43px;">{{'العربيه' }}</strong>
-                                </div>
-                            </li>-->
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="th-navigationarea">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
+            <div class="d-flex justify-content-between align-items-center">
+                <strong class="th-logo">
+                    <a href="index.html"><img src="assets/images/logo.png" alt="image description"></a>
+                </strong>
+                <div class="th-navigationarea">
                     <nav id="th-nav" class="th-nav">
                         <div class="mob-collaps" (click)="collapsToggle()" [ngClass]="isMenuOpen ? 'show': ''">
                             <span></span><span></span><span></span></div>
