--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -51,10 +51,8 @@
 }
 
 .th-pattrenone .th-sectionhead {
-    max-width: 700px;
     padding-bottom: 45px;
     margin: 0 !important;
-    text-align: start !important;
 }
 
 .th-pattrenone .th-sectionhead .th-sectiontitle {
@@ -83,12 +81,27 @@
 .th-features .th-feature .th-featurehead {
     display: flex;
     align-items: center;
+    flex-direction: column;
+    margin: 20px 0;
+}
+
+.th-features .th-feature .th-featurehead:hover .th-featureicon {
+    transform: translateY(-10px);
+    border-radius: 50%;
 }
 
 .th-features .th-feature .th-featurehead .th-featureicon {
     font-size: 45px;
-    color: #00adef;
-    margin-right: 10px;
+    background-color: #00adef;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFF;
+    margin: 15px 0;
+    border-radius: 20px;
+    transition: 0.5s;
 }
 
 .th-features .th-feature .th-featurehead .th-featuretitle h3 {
@@ -120,7 +133,6 @@
 }
 .about-content {
     padding: 80px 0;
-    max-width: 650px;
 }
 .about-content h2 {
     margin: 0;
@@ -145,8 +157,6 @@
 }
 
 .th-sectionspace .th-sectionhead {
-    text-align: center;
-    max-width: 700px;
     margin: 0 auto 40px;
 }
 
@@ -158,12 +168,9 @@
 }
 
 .th-services .th-service {
-    width: 33.33%;
-    padding: 40px;
-}
-
-.th-services .th-service:not(:last-child) {
-    border-right: 1px solid #c2c7cd;
+    background-color: #FFF;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .th-services .th-service .th-serciceicon i {
@@ -172,15 +179,26 @@
     color: #00adef;
 }
 
+.th-services .th-service .th-serciceicon img {
+    width: 100%;
+    height: 250px;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+
+.th-services .th-service:hover img {
+    transform: scale(1.1);
+}
+
 .th-services .th-service .th-servicetitle {
-    padding: 30px 0 0;
+    padding: 20px;
+    height: 160px;
 }
 .th-services .th-service .th-servicetitle h3 a {
     margin: 0;
-    color: whitesmoke;
-    font-size: 21px;
+    color: #00adef;
+    font-size: 20px;
     font-weight: 600;
-    line-height: 21px;
     transition: all 0.3s ease-in-out;
 }
 .th-services .th-service .th-servicetitle:hover h3 a {
@@ -207,9 +225,11 @@
     width: 100%;
 }
 .th-countericon {
-    top: 20px;
-    right: -22px;
-    color: #fff;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -22px;
+    color: #00adef;
+    background-color: #fff;
     width: 72px;
     z-index: 2;
     height: 72px;
@@ -273,8 +293,8 @@
         justify-content: center;
     }
     .th-services .th-service {
-        margin: 10px;
-        width: 50%;
+        margin: 10px auto;
+        width: 95% !important;
         border: 1px solid #c2c7cd;
     }
     .th-counters {
@@ -324,7 +344,7 @@
         padding: 20px;
     }
     .th-countericon {
-        top: -38px;
+        top: 0;
         right: 0 !important;
         left: 0;
         margin: auto !important;
