--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,11 +19,11 @@
       </div>
     </div>
   </owl-carousel>-->
-  <owl-carousel-o [options]="SlideOptions">
+  <owl-carousel-o [options]="SlideOptions" class="owl-home-img">
 
     <ng-container *ngFor="let img of Images">
       <ng-template carouselSlide [id]="img.id">
-        <img src="{{ 'assets/images' + img.src }}" style="height:450px;width:100%">
+        <img src="{{ 'assets/images' + img.src }}">
       </ng-template>
     </ng-container>
 
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="th-featuresandtime">
           <div class="col-12">
-            <div class="th-sectionhead th-alignleft th-nopattren">
+            <div class="th-sectionhead th-alignleft th-nopattren text-center">
               <div class="th-sectiontitle">
                 <h2>{{ "WeGiveYou"   }} <span>{{ "theBest"   }}</span></h2>
               </div>
@@ -147,45 +147,44 @@
         <div class="col-12">
           <div class="th-sectionhead" style="max-width: fit-content;margin-bottom: 12px !important;">
             <div class="th-sectiontitle">
-              <h2 style="color:white">WHY BUY YOUR AUTO INSURANCE <span>THROUGH US?</span></h2>
-            </div>
-            <div class="th-description">
-              <p>
-                
-              </p>
+              <h2 class="text-white">WHY BUY YOUR AUTO INSURANCE <span>THROUGH US ?</span></h2>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-12">
-          <div class="th-services">
-            <div class="th-service">
-              <span class="th-serciceicon">
-                <!--<i class="fa fa-clock-o"></i>-->
-                <img src="assets/images/img1.jpg" style="width:100%" alt="">
-              </span>
-              <div class="th-servicetitle">
-                <h3><a href="#">The process takes minutes and you get instant quotes online</a></h3>
+        <div class="row th-services">
+            <div class="col-lg-4 col-12">
+              <div class="th-service overflow-hidden">
+                <span class="th-serciceicon overflow-hidden">
+                  <!--<i class="fa fa-clock-o"></i>-->
+                  <img src="assets/images/img1.jpg" alt="">
+                </span>
+                <div class="th-servicetitle">
+                  <h3><a href="#">The process takes minutes and you get instant quotes online</a></h3>
+                </div>
               </div>
             </div>
-            <div class="th-service">
-              <span class="th-serciceicon">
-                <!--<i class="fa fa-search"></i>-->
-                <img src="assets/images/img2.jpg" style="width:100%" alt="">
-              </span>
-              <div class="th-servicetitle">
-                <h3><a href="#">Compare quotes online and find the policy that’s right for you</a></h3>
+            <div class="col-lg-4 col-12">
+            <div class="th-service overflow-hidden">
+                <span class="th-serciceicon overflow-hidden">
+                  <!--<i class="fa fa-search"></i>-->
+                  <img src="assets/images/img2.jpg" alt="">
+                </span>
+                <div class="th-servicetitle">
+                  <h3><a href="#">Compare quotes online and find the policy that’s right for you</a></h3>
+                </div>
               </div>
             </div>
-            <div class="th-service" style="padding:38px !important">
-              <span class="th-serciceicon">
-                <!--<i class="fa fa-support"></i>-->
-                <img src="assets/images/img3.jpg" style="width:100%" alt="">
-              </span>
-              <div class="th-servicetitle">
-                <h3><a href="#">If you need help our insurance advisors can offer assistance by phone or email</a></h3>
+            <div class="col-lg-4 col-12">
+              <div class="th-service overflow-hidden">
+                <span class="th-serciceicon overflow-hidden">
+                  <!--<i class="fa fa-support"></i>-->
+                  <img src="assets/images/img3.jpg" alt="">
+                </span>
+                <div class="th-servicetitle">
+                  <h3><a href="#">If you need help our insurance advisors can offer assistance by phone or email</a></h3>
+                </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
@@ -245,7 +244,7 @@
   </section>
   <!-- End Statistics -->
   <!-- Start Sponsors -->
-  <section class="sponsors" style="background:#2d3e5033 !important">
+  <section class="sponsors" style="background:#fff !important">
     <div class="container">
       <!--<owl-carousel [options]="CarouselOptions" [items]="sponsors" [carouselClasses]="['owl-theme', 'sliding']">
         <div class="item" *ngFor="let logo of sponsors">
