--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,5 +1,5 @@
 .th-footermiddlebox {
-    padding: 80px 0;
+    padding: 100px 0;
     overflow: hidden;
     background-color: rgb(0 0 0 / 85%);
 }
@@ -8,12 +8,10 @@
     color: #dbdbdb;
 }
 .th-fcol .th-logo {
-    margin: 0 0 40px;
     display: block;
 }
 .th-faddressinfo {
     width: 100%;
-    float: left;
     color: #dbdbdb;
     list-style: none;
     font-size: 14px;
@@ -21,10 +19,11 @@
 }
 .th-faddressinfo li {
     width: 100%;
-    float: left;
     line-height: inherit;
     list-style-type: none;
     transition: all 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
 }
 .th-faddressinfo li + li {
     padding: 20px 0 0;
@@ -32,12 +31,13 @@
 .th-faddressinfo li .th-addressicon {
     width: 50px;
     height: 50px;
-    float: left;
     border-radius: 0;
-    line-height: 48px;
     margin: 0 15px 0 0;
     text-align: center;
     border: 1px solid #dbdbdb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .th-faddressinfo li .th-addressicon i {
     color: #dbdbdb;
@@ -45,12 +45,10 @@
     line-height: inherit;
 }
 .th-faddressinfo li address {
-    margin: 5px 0;
     overflow: hidden;
     font-style: normal;
 }
 .th-faddressinfo li .th-phone {
-    margin: 5px 0;
     overflow: hidden;
     line-height: 20px;
 }
@@ -63,7 +61,6 @@
 }
 .th-borderheading {
     width: 100%;
-    float: left;
     margin: 0 0 20px;
     padding: 0 0 20px;
     position: relative;
@@ -101,7 +98,6 @@
 }
 .th-fcol .th-socialicons {
     width: 100%;
-    float: left;
     list-style: none;
     display: flex;
     align-items: center;
@@ -129,14 +125,12 @@
 }
 .th-usefullinks {
     width: 100%;
-    float: left;
     font-size: 14px;
     line-height: 17px;
     list-style: none;
 }
 .th-usefullinks li {
     width: 100%;
-    float: left;
     line-height: inherit;
     list-style-type: none;
     transition: all 0.3s ease-in-out;
