--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -4,36 +4,27 @@
 .th-header {
 	z-index: 50;
 	position: relative;
-	height: 207px;
 }
 .th-topbar {
 	width: 100%;
-	float: left;
-	overflow: hidden;
-	padding: 15px 0;
+	padding: 5px 0;
 }
 .th-topbar .n-col {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
-.th-logo {
-	float: left;
-}
 .th-logo a,
 .th-logo a img {
 	display: block;
 }
-.th-rightarea {
-	float: right;
-}
+
 .th-emails {
 	font-size: 14px;
 	list-style: none;
 	line-height: 10px;
 }
 .th-emails li {
-	float: left;
 	padding: 0 12px;
 	line-height: inherit;
 	list-style-type: none;
@@ -122,7 +113,6 @@
 	text-align: right;
 }
 .th-addressbox li {
-	text-align: left;
 	display: inline-block;
 	vertical-align: middle;
 	list-style-type: none;
@@ -138,7 +128,6 @@
 .th-addressicon {
 	width: 45px;
 	height: 45px;
-	float: left;
 	margin: 0 10px 0 0;
 	line-height: 43px;
 	border-radius: 3px;
@@ -168,7 +157,6 @@
 	line-height: 18px;
 }
 .th-addnav {
-	float: right;
 	font-size: 14px;
 	line-height: 20px;
 	list-style-type: none;
@@ -179,15 +167,6 @@
 	vertical-align: middle;
 	line-height: inherit;
 	list-style-type: none;
-}
-.th-addnav > li:first-child {
-	padding-left: 0;
-}
-.th-addnav > li:last-child {
-	padding-right: 0;
-}
-.th-addnav > li + li {
-	border-left: 1px solid #fff;
 }
 .th-addnav > li a {
 	display: block;
@@ -231,12 +210,10 @@
 =============================================*/
 .th-navigationarea {
 	width: 100%;
-	float: left;
-	background-color: #2d3e50;
+	/* background-color: #2d3e50; */
 }
 .th-nav {
 	z-index: 2;
-	height: 62px;
 	font-size: 16px;
 	font-weight: 600;
 	line-height: 16px;
@@ -245,7 +222,6 @@
 }
 .th-navigation {
 	width: 100%;
-	float: left;
 	padding: 0;
 }
 .th-navigation ul {
@@ -253,20 +229,17 @@
 	line-height: inherit;
 }
 .th-navigation > ul {
-	width: 100%;
 	display: flex;
-	justify-content: center;
 	align-items: center;
+	justify-content: flex-end;
 	margin: 0;
-	height: 62px;
 }
 .th-navigation ul li {
 	line-height: inherit;
 	list-style-type: none;
 }
 .th-navigation > ul > li {
-	float: left;
-	padding: 13px 20px;
+	padding: 0 10px;
 }
 .th-navigation > ul > li:first-child,
 .th-navigation > ul > li:first-child > a {
@@ -278,7 +251,7 @@
 	line-height: inherit;
 }
 .th-navigation > ul > li > a {
-	color: #fff;
+	color: #544f55;
 	transition: all 0.3s ease-in-out;
 }
 .th-navigation > ul > li:hover > a,
@@ -318,7 +291,6 @@
 	padding: 0 0 0 10px;
 }
 .th-menudropdown .th-menudropdown {
-	left: 100%;
 	opacity: 0;
 	visibility: hidden;
 }
@@ -334,11 +306,9 @@
 .th-menudropdown .th-hasdropdown:hover .th-menudropdown {
 	top: 0;
 	right: auto;
-	left: 103%;
 }
 .th-dropdowarrow {
 	top: 10px;
-	right: 20px;
 	color: #fff;
 	z-index: 20;
 	width: 20px;
@@ -366,7 +336,6 @@
 .th-menudropdown .th-hasdropdown:hover .th-menudropdown {
 	top: 0;
 	right: auto;
-	left: 103%;
 }
 .th-headerthree .th-hasdropdown:hover > .th-menudropdown {
 	top: 100%;
@@ -378,7 +347,6 @@
 .th-headerthree .th-menudropdown .th-hasdropdown:hover .th-menudropdown {
 	top: 0;
 	left: auto;
-	right: 103%;
 }
 .th-menudropdown li:hover a {
 	color: #00adef !important;
@@ -390,15 +358,17 @@
 	height: 50px;
 	z-index: 999;
 	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
 	cursor: pointer;
 	display: none;
 	transition: all 0.3s ease-in-out;
 }
 .mob-collaps span {
 	display: block;
-	width: 20px;
-	height: 3px;
-	background-color: #fff;
+	width: 28px;
+	height: 4px;
+	background-color: #505155;
 	border-radius: 30px;
 	margin: 4px 0;
 }
@@ -415,13 +385,13 @@
 	left: 0;
 	right: 0;
 	margin: auto;
-	top: 27px;
+	top: 28.5px;
 	opacity: 1;
 	transition: all 0.25s ease-in-out;
 }
 .mob-collaps span:nth-child(3) {
 	position: absolute;
-	top: 34px;
+	top: 37px;
 	left: 0;
 	right: 0;
 	margin: auto;
@@ -443,10 +413,12 @@
 	transform: rotate(45deg) rotateY(360deg);
 	transition: all 0.25s ease-in-out;
 }
+.mob-collaps.show span {
+	background-color: #fff;
+}
 
 @media(max-width: 1024px) {
 	.th-navigation > ul > li {
-		float: left;
 		padding: 13px 10px;
 	}
 }
@@ -462,12 +434,7 @@
 
 @media (max-width: 767px) {
 	.th-header {
-		height: auto;
-    overflow: hidden;
-	}
-	.th-logo {
-		float: none;
-		margin: 0 auto 15px;
+    	overflow: hidden;
 	}
 	.th-topbar .n-col {
 		flex-wrap: wrap;
@@ -499,7 +466,7 @@
 		width: 100%;
 		left: 0;
 		display: block;
-		padding-top: 80px;
+		padding-top: 35px;
 		overflow-y: auto;
 		transform-origin: left;
 		transform: translateX(-100%);
@@ -512,6 +479,7 @@
 	}
 	.th-navigation > ul > li a {
 		padding: 10px !important;
+		color: #fff;
 	}
 	.th-navigation > ul > li:first-child {
 		padding-left: 13px !important;
