--- a/src/styles.css
+++ b/src/styles.css
@@ -102,27 +102,28 @@ ul {
 
 .slider .owl-nav {
 	position: absolute;
-	bottom: 0;
-	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
 	right: 0;
 	margin: auto;
-	background-color: #2d3e50;
-	color: #fff;
-	max-width: 100px;
-	height: 40px;
-	transform: skewX(-15deg);
-	line-height: 40px;
+	width: 100%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 .slider .owl-nav .owl-next,
 .slider .owl-nav .owl-prev {
 	margin: 0;
-	line-height: 1;
-	font-size: 20px !important;
-	flex-grow: 1;
-	border-radius: 0;
-	transition: all 0.3s ease-in-out;
+    font-size: 30px !important;
+    border-radius: 0;
+    transition: all 0.3s ease-in-out;
+    width: 65px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    background-color: rgba(255,255,255,0.9);
+    color: #3dacc5;
 }
 .slider .owl-nav .owl-next:hover,
 .slider .owl-nav .owl-prev:hover {
@@ -482,4 +483,15 @@ ul {
 .rtl .mob-collaps {
 	right: auto !important;
 	left: 0;
+}
+
+/* Sh3wZa */
+.owl-home-img img{
+	height: 100vh;
+}
+.owl-nav{
+	
+}
+.owl-nav div{
+	
 }
