--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,7 +7,7 @@
                     <div class="th-fcol">
                         <strong class="th-logo">
                             <a href="#">
-                                <img src="assets/images/logo.png" alt="image description">
+                                <img src="assets/images/logo-uo.jpeg" alt="image description">
                             </a>
                         </strong>
                         <p>
