--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -238,6 +238,7 @@
     font-size: 38px;
     position: absolute;
     text-align: center;
+    border-radius: 10px;
 }
 .th-countericon i {
     display: block;
