--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <strong class="th-logo">
-                    <a href="index.html"><img src="assets/images/logo.png" alt="image description"></a>
+                    <a href="index.html"><img src="assets/images/logo-uo.jpeg" alt="image description"></a>
                 </strong>
                 <div class="th-navigationarea">
                     <nav id="th-nav" class="th-nav">
