update color background

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
 
 <main id="th-main" class="th-main th-haslayout">
   <!-- Start Features -->
-  <section class="th-sectionspace th-haslayout th-pattrenone">
+  <section class="th-sectionspace th-haslayout th-pattrenone" style="background-color:#fff0fe">
     <div class="container">
       <div class="row">
         <div class="th-featuresandtime">
@@ -191,7 +191,7 @@
   </section>
   <!-- End Services -->
   <!-- Start Statistics -->
-  <section class="th-haslayout statistics">
+  <section class="th-haslayout statistics" style="background-color:#e3b5d9">
     <div class="container">
       <div class="row">
         <div class="th-counters">
